traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def getMondeHauteur(): Int = {
  val a : Int = getY()
  var nb : Int = 0
	val dir : Direction = getDirection()
  setDirection(Direction.NORD)
  do {avance(); nb= nb + 1} while (a!=getY())
	setDirection(dir)
  return(nb)
}

def getMondeLargeur(): Int = {
  val a=getX()
  var nb : Int = 0
  val dir : Direction = getDirection()
  setDirection(Direction.EST)
  do {avance(); nb= nb + 1} while (a!=getX())
  setDirection(dir)
  return(nb)
}


override def run() {
  val largeur : Int = getMondeLargeur()
  val hauteur : Int = getMondeHauteur()
  var cpt : Int = 0 
  (getX(),getY()) match {
    case (largeur,hauteur) => ecritMessage(cpt)
    case (_,hauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
    case (_,_)=> ecritMessage(cpt); cpt=cpt+1; setPos(getX(),getY()+1)
  }
}